refactor: clean up code and improve ESLint configuration; remove unused imports and adjust settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,10 +20,8 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "[astro]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "astro-build.astro-vscode"
-  },
+  "eslint.useFlatConfig": true,
+  "eslint.workingDirectories": ["./"],
   "cSpell.words": ["Flashlist", "Lato"],
   "tailwindCSS.experimental.classRegex": [
     ["tv\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
