--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "version": "pnpm run prebuild && git add .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc  --noemit",
-    "lint:translations": "eslint ./src/translations/ --fix --ext .json  ",
-    "check-all": "pnpm run lint && pnpm run type-check && pnpm run lint:translations"
+    "check-all": "pnpm run lint && pnpm run type-check"
   },
   "dependencies": {
     "@expo/metro-runtime": "^5.0.4",
